Fix for conditional custom fields during step by step event creation Switch parameter editing to use native Joomla showon iCal import modal z-index fix for uikit sites

--- a/component/site/assets/css/eventsadmin.css
+++ b/component/site/assets/css/eventsadmin.css
@@ -886,7 +886,7 @@ table.ev_navtable tr {
     height: 500px;
     overflow: hidden;
     position: fixed;
-    z-index: 1050;
+    z-index: 9999;
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.3);
     -webkit-border-radius: 6px;
@@ -1054,6 +1054,7 @@ table.ev_navtable tr {
     width: 99.5%;
     border: none;
     height: 100%;
+    min-height: 425px;
     max-height: 100%;
     /* See http://stackoverflow.com/questions/9129182/iframe-100-height-causes-vertical-scrollbar */
     display: block;
